# sotX

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  deny.toml  hello_dynamic  htop  justfile  nano
.cargo/: config.toml
.claude/: settings.local.json
artifact/: Dockerfile  README.md  run_evaluation.sh
boot/: limine.conf
docs/: ABI_v0.1.0.md  ARCHITECTURE.md  DECEPTION_MODEL.md  FORMAL_MODEL.md  MEMORY_BUDGET.md  RUMP_ADAPTATION.md  SOT_SPEC.md  SPRINT1_STATUS.md  SPRINT2_STATUS.md  SPRINT3_STATUS.md  hp-pavilion-install.md  linux_abi_map.md  lkl-architecture.md  lkl-fusion-final-state.md  lkl-futex-fix-design.md  manual.tex  paper.tex  phase-5-design.md  signal_invariants.md  sotBSD_v0.2.0_whitepaper.tex  sotX_v0.2.0_whitepaper.tex  sotbsd-manual.tex  sotbsd-paper.tex  sotfs-design-v1.md  sotfs-design.tex  sotfs-manual.tex  sotfs-paper.tex  (+8 more)
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: ipc_decode.rs  provenance_entry.rs  syscall_parse.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: boot_splash.rs  boot_uefi.rs  dbg_diag.rs  elf.rs  fault.rs  initrd.rs  irq.rs  karl.rs  main.rs  migrate.rs  panic.rs  pool.rs  shm.rs  svc_registry.rs  trace.rs  user.rs  user_init.rs  watchdog.rs
kernel/src/acpi/: mod.rs  shutdown.rs
kernel/src/arch/x86_64/: ept.rs  fb_console.rs  fb_font.rs  fb_text.rs  gdt.rs  idt.rs  io.rs  ioapic.rs  lapic.rs  mod.rs  percpu.rs  pic.rs  pit.rs  serial.rs  syscall.rs  vmx.rs
kernel/src/cap/: mod.rs  table.rs
kernel/src/ipc/: audit.rs  channel.rs  endpoint.rs  mailbox.rs  mod.rs  notify.rs  route.rs
kernel/src/mm/: demand.rs  frame.rs  mmio.rs  mod.rs  page_cache.rs  paging.rs  slab.rs
kernel/src/sched/: domain.rs  mod.rs  thread.rs  wsdeque.rs
kernel/src/sot/: aslr.rs  cap_epoch.rs  crypto.rs  domain.rs  fast_ipc.rs  mod.rs  provenance.rs  secure_string.rs  so.rs  tx.rs  tx_wal.rs  types.rs  wx_enforce.rs
kernel/src/sync/: lock_order.rs
kernel/src/syscall/: cap.rs  debug.rs  domain.rs  fault.rs  ipc.rs  irq.rs  memory.rs  mod.rs  notify.rs  service.rs  shm.rs  sot.rs  thread.rs  vm.rs
kernel/src/vm/: bzimage.rs  deception.rs  devmodel.rs  exit.rs  mod.rs
libs/sotos-common/: Cargo.toml
libs/sotos-common/src/: elf.rs  lib.rs  linux_abi.rs  spsc.rs  trace.rs  typed_channel.rs  vfs.rs
libs/sotos-linux-abi/: Cargo.toml
libs/sotos-linux-abi/src/: ctx.rs  hybrid.rs  lib.rs  lkl.rs  lucas.rs  trait_def.rs  types.rs
libs/sotos-testlib/: Cargo.toml  linker-so.ld
libs/sotos-testlib/.cargo/: config.toml
libs/sotos-testlib/src/: lib.rs
personality/bsd/bhyve/: Cargo.toml
personality/bsd/bhyve/src/: backend.rs  deception.rs  introspect.rs  lib.rs  vcpu.rs  vmcs.rs  vmm.rs
services/compositor/: Cargo.toml
services/compositor/host-tests/: layer_shell_geometry.rs
services/compositor/src/: animation.rs  cursor.rs  damage.rs  decorations.rs  font.rs  input.rs  main.rs  render.rs  skia_render.rs  wallpaper.rs
services/compositor/src/wayland/: compositor.rs  display.rs  fractional_scale.rs  layer_shell.rs  mod.rs  output.rs  registry.rs  seat.rs  shell.rs  shm.rs  xdg_popup.rs
services/init/: Cargo.toml  build.rs  linker.ld
services/init/lkl/: Makefile  README-NET.md  allocator.c  disk_backend.c  guest_mem.c  host_ops.c  host_ops.h  libc_stubs.c  lkl_bridge.c  net_backend.c  net_backend.h  sotos_syscall.h  syscall_xlat.h
services/init/src/: boot_tests.rs  child_handler.rs  crossbow_demo.rs  deception_demo.rs  deception_service.rs  dispatch.rs  drm.rs  evdev.rs  exec.rs  fd.rs  fd_ops.rs  fma_demo.rs  fork.rs  framebuffer.rs  framebuffer_palette.rs  init_boot.rs  lkl.rs  lkl_route.rs  lucas_handler.rs  lucas_shell.rs  main.rs  process.rs  sigkey_generated.rs  signify.rs  sot_bridge.rs  sot_types.rs  supervisor.rs  syscall_log.rs  tier4_demo.rs  tier5_demo.rs  tier6_demo.rs  tier6b_demo.rs  tier6c_demo.rs  tier6d_demo.rs  trace.rs  udev.rs  vdso.rs  vfs_service.rs  virtual_files.rs  vma.rs  (+2 more)
services/init/src/boot_tests/: benchmarks.rs  busybox.rs  dynamic.rs  dynamic_test.rs  linux_abi.rs  mod.rs  validation.rs
services/init/src/child_handler/: lkl.rs  mod.rs  pipe.rs
services/init/src/syscalls/: context.rs  fs.rs  info.rs  mm.rs  net.rs  signal.rs  task.rs
services/init/src/syscalls/fs/: fs_fd.rs  fs_initrd.rs  fs_pipe.rs  fs_sotfs.rs  fs_special.rs  fs_stdio.rs  fs_vfs.rs  mod.rs  vfs_delete.rs  vfs_metadata.rs  vfs_open.rs  vfs_path.rs  vfs_read_write.rs
services/lucas-shell/: Cargo.toml
services/lucas-shell/src/: builtins.rs  color.rs  env.rs  exec.rs  functions.rs  help.rs  history.rs  jobs.rs  line.rs  lua.rs  main.rs  net.rs  parse.rs  prompt.rs  syscall.rs  trace.rs  util.rs
services/lucas-shell/src/builtins/: apt.rs  files.rs  help_data.rs  mod.rs  system.rs  text.rs  util.rs
services/net/: Cargo.toml
services/net/src/: main.rs
services/nvme/: Cargo.toml
services/nvme/src/: main.rs
services/sotos-term/: Cargo.toml
services/sotos-term/src/: keyboard.rs  main.rs  term.rs  wayland.rs
services/sotsh/: Cargo.toml  linker.ld
services/sotsh/.cargo/: config.toml
services/sotsh/src/: ast.rs  context.rs  error.rs  history.rs  lib.rs  linedit.rs  main.rs  parser.rs  runtime.rs  value.rs
services/sotsh/src/builtins/: arm.rs  bg.rs  cap.rs  cat.rs  cd.rs  export.rs  fg.rs  jobs.rs  ls.rs  lua.rs  mod.rs  ps.rs
services/xhci/: Cargo.toml
services/xhci/src/: main.rs
sotfs/: Cargo.toml
sotfs/.cargo/: config.toml
sotfs/fuzz/: Cargo.toml
sotfs/fuzz/.cargo/: config.toml
sotfs/fuzz/fuzz_targets/: fuzz_op_sequence.rs
sotfs/sotfs-fuse/: Cargo.toml
sotfs/sotfs-fuse/src/: fs.rs  main.rs
sotfs/sotfs-graph/: Cargo.toml
sotfs/sotfs-graph/src/: arena.rs  error.rs  graph.rs  lib.rs  types.rs
sotfs/sotfs-monitor/benches/: monitor_bench.rs
sotfs/sotfs-monitor/src/: curvature.rs  deception.rs  treewidth.rs
sotfs/sotfs-monitor/tests/: adversarial.rs
sotfs/sotfs-ops/: Cargo.toml
sotfs/sotfs-ops/benches/: comparison_bench.rs
sotfs/sotfs-ops/src/: lib.rs
sotfs/sotfs-ops/tests/: proptest_ops.rs
sotfs/sotfs-storage/src/: backend.rs  lib.rs
(+373 files in other folders)
