[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/sotos-common",
    "libs/sotos-pci",
    "libs/sotos-virtio",
    "libs/sotos-objstore",
    "libs/sotos-net",
    "libs/sotos-ld",
    "libs/sotos-nvme",
    "libs/sotos-xhci",
    "libs/sotos-wasm",
]
exclude = [
    "services/init",
    "services/lucas-shell",
    "services/kbd",
    "services/net",
    "services/nvme",
    "services/xhci",
    "services/vmm",
    "services/hello",
    "libs/sotos-testlib",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
