[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/sotos-common",
    "libs/sotos-pci",
    "libs/sotos-virtio",
    "libs/sotos-objstore",
    "libs/sotos-net",
    "libs/sotos-ld",
    "libs/sotos-nvme",
    "libs/sotos-xhci",
    "libs/sotos-wasm",
    "libs/sotos-audio",
    "libs/sotos-ahci",
    "libs/sotos-usb-storage",
    "libs/sotos-mouse",
    "libs/sotos-gui",
    "libs/sotos-lua",
    "libs/sotos-pkg",
]
exclude = [
    "services/init",
    "services/lucas-shell",
    "services/kbd",
    "services/net",
    "services/nvme",
    "services/xhci",
    "services/vmm",
    "services/hello",
    "services/hello-linux",
    "services/hello-musl",
    "services/net-test",
    "libs/sotos-testlib",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
