[workspace]
resolver = "2"
members = [
    "kernel",
    "libs/sotos-common",
    "libs/sotos-pci",
    "libs/sotos-virtio",
    "libs/sotos-objstore",
    "libs/sotos-ld",
    "libs/sotos-nvme",
    "libs/sotos-xhci",
    "libs/sotos-wasm",
    "libs/sotos-audio",
    "libs/sotos-ahci",
    "libs/sotos-usb-storage",
    "libs/sotos-mouse",
    "libs/sotos-gui",
    "libs/sotos-lua",
    "libs/sotos-pkg",
]
exclude = [
    "services/init",
    "services/lucas-shell",
    "services/kbd",
    "services/net",
    "services/nvme",
    "services/xhci",
    "services/vmm",
    "services/hello",
    "services/hello-linux",
    "services/hello-musl",
    "services/net-test",
    "services/audio",
    "services/compositor",
    "services/drm-test",
    "services/hello-gui",
    "services/styx-test",
    "services/rump-vfs",
    "services/attacker",
    "services/posix-test",
    "services/kernel-test",
    "services/sot-dtrace",
    "services/sot-pkg",
    "services/sot-carp",
    "services/sot-cheri",
    "libs/sotos-testlib",
    "tools/sotctl",
    "tools/capctl",
    "tools/txlog",
    "tools/provenance-viewer",
    "tools/deception-config",
    "tests/integration",
    "tests/security",
    "tests/posix",
    "tests/deception",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
