[package]
name = "sotos-kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
verbose = []
ipc-audit = []
# Enable to fire `acpi::shutdown::shutdown()` ~3s after boot completes.
# Used to validate the M2 power-off path end-to-end without a userspace
# trigger — when set, QEMU exits cleanly (exit 0) instead of hanging at
# the LUCAS prompt.
test-shutdown = []
# Enable to keep the kernel-side framebuffer text renderer active for
# the entire boot (skip `hand_off_to_init()`). Used to diagnose hangs on
# real hardware where serial isn't visible — every byte the kernel or
# userspace emits via `SYS_DEBUG_PRINT` ends up on the laptop screen.
# Default off: QEMU hands off so the compositor owns the FB cleanly.
trace-boot = []
# Enable to auto-load the Wayland compositor, sotos-term and hello-gui
# from the initrd at boot. OFF by default: the kernel hands control to
# init's FB text console and LUCAS shell renders directly on the framebuffer,
# which is much more robust on real laptops. With this feature, boot ends in
# the LUCAS Terminal Wayland window exactly like the QEMU demo.
# Mutually independent from `trace-boot`.
gui-boot = []

[dependencies]
limine = "0.5"
x86_64 = "0.15"
spin = { version = "0.9", default-features = false, features = ["lazy", "mutex", "spin_mutex"] }
sotos-common = { path = "../libs/sotos-common", features = ["kernel"] }
elf = { version = "0.7", default-features = false }

