[package]
name = "sotos-common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
linux-raw-sys = { version = "0.4", default-features = false, features = ["general", "errno", "ioctl", "no_std"] }
bitflags = { version = "2", default-features = false }

[features]
default = []
kernel = []
