[package]
name = "sotos-linux-abi"
version = "0.1.0"
edition = "2021"

# Wave-1 seed of the LUCAS -> LKL migration. Defines the `LinuxBackend` trait
# that both the legacy hand-rolled Linux ABI layer ("LUCAS", lives in
# services/init/src/child_handler.rs) and the new LKL (Linux Kernel Library)
# backend will eventually implement. The adapter in `lucas.rs` is a type
# marker only -- the real dispatch still happens inside child_handler.

[dependencies]
sotos-common = { path = "../sotos-common" }

[features]
default = ["backend-lucas"]
# Enables the LucasBackend adapter shim (zero-sized type marker).
backend-lucas = []
# Enables the LklBackend type marker + indirect FFI dispatch via fn
# pointer (see src/lkl.rs). The init crate registers its concrete
# lkl_bridge_syscall via `set_lkl_syscall_fn` when built with SOTOS_LKL=1.
# Without registration, all calls return -ENOSYS.
backend-lkl = []
# Enables the HybridBackend routing wrapper. Requires both backends.
backend-hybrid = ["backend-lucas", "backend-lkl"]
