[package]
name = "sotos-testlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Standalone package — keeps `cargo build` from latching on to a parent
# workspace (e.g., when invoked from a git worktree subdirectory).
[workspace]
