[package]
name = "sotos-init"
version = "0.1.0"
edition = "2021"

[dependencies]
sotos-common = { path = "../../libs/sotos-common" }
sotos-pci = { path = "../../libs/sotos-pci" }
sotos-virtio = { path = "../../libs/sotos-virtio" }
sotos-objstore = { path = "../../libs/sotos-objstore" }
sotos-ld = { path = "../../libs/sotos-ld" }
sotos-gui = { path = "../../libs/sotos-gui" }
sotos-wasm = { path = "../../libs/sotos-wasm" }
goblin = { version = "0.8", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
vte = { version = "0.13", default-features = false, features = ["no_std"] }
ufmt = { version = "0.2", default-features = false }

[features]
default = ["trace"]
trace = []
https-proxy = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
