[package]
name = "sotos-init"
version = "0.1.0"
edition = "2021"

# Standalone (not part of any cargo workspace). Required when building
# inside a git worktree, where the parent .claude/worktrees/.../Cargo.toml
# excludes services/init. Without this block, cargo walks up to the main
# repo's Cargo.toml and reports a path mismatch.
[workspace]

[dependencies]
sotos-common = { path = "../../libs/sotos-common" }
sotos-linux-abi = { path = "../../libs/sotos-linux-abi", default-features = false, features = ["backend-lucas"] }
sotos-deception = { path = "../../personality/common/deception" }
sotos-provenance = { path = "../../personality/common/provenance" }
sot-fma = { path = "../../libs/sot-fma" }
sot-zfs = { path = "../../personality/bsd/zfs" }
sot-hammer2 = { path = "../../personality/bsd/hammer2" }
sot-bhyve = { path = "../../personality/bsd/bhyve", features = ["kernel-backend"] }
sot-network = { path = "../../personality/bsd/network" }
sot-crossbow = { path = "../../libs/sot-crossbow" }
sotos-pci = { path = "../../libs/sotos-pci" }
sotos-virtio = { path = "../../libs/sotos-virtio" }
sotos-objstore = { path = "../../libs/sotos-objstore" }
sotos-ld = { path = "../../libs/sotos-ld" }
sotos-gui = { path = "../../libs/sotos-gui" }
sotos-theme = { path = "../../libs/sotos-theme" }
sotos-wasm = { path = "../../libs/sotos-wasm" }
goblin = { version = "0.8", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
vte = { version = "0.13", default-features = false, features = ["no_std"] }
ufmt = { version = "0.2", default-features = false }
ed25519-compact = { version = "2", default-features = false }

[features]
default = ["trace"]
trace = []
https-proxy = []
# Linux ABI backend selection (forwarded to sotos-linux-abi).
# backend-lucas is on implicitly via the dep above; this flag exists so
# downstream configs can toggle backends symmetrically.
backend-lucas = ["sotos-linux-abi/backend-lucas"]
backend-lkl = ["sotos-linux-abi/backend-lkl"]
# B3: opt-in native sotSh shell. When enabled, init spawns sotsh alongside
# lucas-shell on boot. Select via `just build-user-sotsh` / `just run-sotsh`.
# Default boot still runs lucas-shell only.
shell-sotsh = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
