[package]
name = "sotos-init"
version = "0.1.0"
edition = "2021"

# Standalone (not part of any cargo workspace). Required when building
# inside a git worktree, where the parent .claude/worktrees/.../Cargo.toml
# excludes services/init. Without this block, cargo walks up to the main
# repo's Cargo.toml and reports a path mismatch.
[workspace]

[dependencies]
sotos-common = { path = "../../libs/sotos-common" }
sotos-linux-abi = { path = "../../libs/sotos-linux-abi", default-features = false, features = ["backend-hybrid"] }
sotos-deception = { path = "../../personality/common/deception" }
sotos-provenance = { path = "../../personality/common/provenance" }
sot-fma = { path = "../../libs/sot-fma" }
sot-zfs = { path = "../../personality/bsd/zfs" }
sot-hammer2 = { path = "../../personality/bsd/hammer2" }
sot-bhyve = { path = "../../personality/bsd/bhyve", features = ["kernel-backend"] }
sot-network = { path = "../../personality/bsd/network" }
sot-crossbow = { path = "../../libs/sot-crossbow" }
sotos-pci = { path = "../../libs/sotos-pci" }
sotos-virtio = { path = "../../libs/sotos-virtio" }
sotos-objstore = { path = "../../libs/sotos-objstore" }
sotos-ld = { path = "../../libs/sotos-ld" }
sotos-gui = { path = "../../libs/sotos-gui" }
sotos-theme = { path = "../../libs/sotos-theme" }
sotos-wasm = { path = "../../libs/sotos-wasm" }
goblin = { version = "0.8", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
vte = { version = "0.13", default-features = false, features = ["no_std"] }
ufmt = { version = "0.2", default-features = false }
ed25519-compact = { version = "2", default-features = false }

[features]
default = ["trace"]
trace = []
https-proxy = []
# Linux ABI backend selection (forwarded to sotos-linux-abi).
# backend-lucas is on implicitly via the dep above; this flag exists so
# downstream configs can toggle backends symmetrically.
backend-lucas = ["sotos-linux-abi/backend-lucas"]
backend-lkl = ["sotos-linux-abi/backend-lkl"]
backend-hybrid = ["sotos-linux-abi/backend-hybrid"]
# B5: default shell swap. Post-B5, init *always* spawns sotsh (native sotOS
# shell, B1 port). The legacy Linux-ABI lucas-shell is now opt-in via
# `shell-lucas` -- enable it for the soak window before lucas-shell is
# removed entirely. Select via `just build-user-lucas` / `just run-lucas`.
shell-lucas = []
# Deprecated alias kept for backward-compat with B3-era invocations
# (`just build-user-sotsh` / `just run-sotsh`). Spawns sotsh + lucas-shell
# both, matching the pre-B5 `shell-sotsh` semantics. Slated for removal.
shell-sotsh = ["shell-lucas"]
# Minimal boot: skip the entire phase 6 QA/demo block (hello spawn, test
# services, deception/tier4-5-6 demos, supervisor SMF walk). Goes straight
# from early bring-up to vfs_service + spawn_sotsh_native. Use this when
# the graphical stack is misbehaving and you just want sotsh on serial.
minimal-boot = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
