[package]
name = "sotos-net-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
sotos-common = { path = "../../libs/sotos-common" }
sotos-pci = { path = "../../libs/sotos-pci" }
sotos-virtio = { path = "../../libs/sotos-virtio" }
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc",
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-dhcpv4",
    "socket-dns",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
