[package]
name = "sotos-nvme-svc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sotos-common = { path = "../../libs/sotos-common" }
sotos-pci = { path = "../../libs/sotos-pci" }
sotos-nvme = { path = "../../libs/sotos-nvme" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
