[package]
name = "sotos-sotsh"
version = "0.1.0"
edition = "2021"

# Isolate from the root workspace — sotsh is a native sotOS userspace
# binary that builds against x86_64-unknown-none with its own config.
[workspace]

[dependencies]
# chumsky 0.9 with default features off drops `std` + `spill-stack` and
# keeps the parser no_std-friendly (chumsky still pulls in `alloc` itself).
chumsky = { version = "0.9", default-features = false }
sotos-common = { path = "../../libs/sotos-common" }
# sotos-lua is a small no_std Lua 5.4 subset interpreter with no extra
# features or deps of its own, so the default import is already the
# no_std build. Used by the `eval` / `lua` built-ins.
sotos-lua = { path = "../../libs/sotos-lua" }

[lib]
name = "sotos_sotsh"
path = "src/lib.rs"

[[bin]]
name = "sotsh"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
